test/Fail/Issue756a.err
Issue756a.agda:13.12-26: error: [NotAllowedInDotPatterns.LetExpressions]
Let expressions are not allowed in dot patterns
when scope checking let x = n in x
